change package type

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "anime-db/shikimori-browser-bundle",
     "license": "GPL-3.0",
-    "type": "anime-db-plugin",
+    "type": "library",
     "description": "Plugin Shikimori for the catalog Anime DB",
     "homepage": "http://github.com/anime-db/shikimori-browser-bundle",
     "version": "0.1.0",
@@ -9,8 +9,7 @@
         "psr-0": { "AnimeDb\\Bundle\\ShikimoriBrowserBundle": "src/" }
     },
     "require": {
-        "php": ">=5.4.0",
-        "anime-db/catalog-bundle": "0.4.*"
+        "php": ">=5.4.0"
     },
     "minimum-stability": "dev"
 }
