--- a/src/AnimeDb/Bundle/ShikimoriBrowserBundle/Resources/config/services.yml
+++ b/src/AnimeDb/Bundle/ShikimoriBrowserBundle/Resources/config/services.yml
@@ -2,6 +2,12 @@ services:
     anime_db.shikimori.browser:
         class: AnimeDb\Bundle\ShikimoriBrowserBundle\Service\Browser
         arguments:
+            - @anime_db.shikimori.browser.client
             - %anime_db.shikimori.host%
             - %anime_db.shikimori.api.host%
             - %anime_db.shikimori.api.prefix%
+
+    anime_db.shikimori.browser.client:
+        class: Guzzle\Http\Client
+        arguments: [ %anime_db.shikimori.host% ]
+        public: false
