--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -4,10 +4,9 @@ services:
         arguments:
             - @anime_db.shikimori.browser.client
             - %anime_db.shikimori.host%
-            - %anime_db.shikimori.api.host%
             - %anime_db.shikimori.api.prefix%
 
     anime_db.shikimori.browser.client:
         class: Guzzle\Http\Client
-        arguments: [ %anime_db.shikimori.host% ]
+        arguments: [ %anime_db.shikimori.api.host% ]
         public: false
