--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,15 @@
     "version": "0.1.0",
     "autoload": {
         "psr-4": {
-            "AnimeDb\\Bundle\\ShikimoriBrowserBundle": "src/",
-            "AnimeDb\\Bundle\\ShikimoriBrowserBundle\\Tests": "tests/"
+            "AnimeDb\\Bundle\\ShikimoriBrowserBundle\\": "src/",
+            "AnimeDb\\Bundle\\ShikimoriBrowserBundle\\Tests\\": "tests/"
         }
     },
     "require": {
         "php": ">=5.4.0"
+    },
+    "require-dev": {
+        "guzzle/guzzle": "3.9.*"
     },
     "minimum-stability": "dev"
 }
