--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,7 @@
         }
     },
     "require": {
-        "php": ">=5.4.0"
-    },
-    "require-dev": {
+        "php": ">=5.4.0",
         "guzzle/guzzle": "3.9.*"
     },
     "minimum-stability": "dev"
