--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,23 @@
 {
-    "name": "anime-db/shikimori-browser-bundle",
-    "license": "GPL-3.0",
-    "type": "library",
-    "description": "Plugin Shikimori for the catalog Anime DB",
-    "homepage": "http://github.com/anime-db/shikimori-browser-bundle",
-    "version": "1.0.0",
-    "autoload": {
-        "psr-4": {
-            "AnimeDb\\Bundle\\ShikimoriBrowserBundle\\": "src/",
-            "AnimeDb\\Bundle\\ShikimoriBrowserBundle\\Tests\\": "tests/"
-        }
-    },
-    "require": {
-        "php": ">=5.3.3",
-        "guzzle/guzzle": "3.9.*"
-    },
-    "minimum-stability": "dev"
+	"name" : "anime-db/shikimori-browser-bundle",
+	"license" : "GPL-3.0",
+	"type" : "library",
+	"description" : "Plugin Shikimori for the catalog Anime DB",
+	"homepage" : "http://github.com/anime-db/shikimori-browser-bundle",
+	"version" : "1.0.0",
+	"autoload" : {
+		"psr-4" : {
+			"AnimeDb\\Bundle\\ShikimoriBrowserBundle\\" : "src/"
+		}
+	},
+	"autoload-dev" : {
+		"psr-4" : {
+			"AnimeDb\\Bundle\\ShikimoriBrowserBundle\\Tests\\" : "tests/"
+		}
+	},
+	"require" : {
+		"php" : ">=5.3.3",
+		"guzzle/guzzle" : "3.9.*"
+	},
+	"minimum-stability" : "dev"
 }
