--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,11 @@
 		"php" : ">=5.3.3",
 		"guzzle/guzzle" : "3.9.*"
 	},
+	"require-dev" : {
+		"symfony/dependency-injection" : ">=2.3.17",
+		"symfony/expression-language" : ">=2.3.17",
+		"symfony/config" : ">=2.3.17",
+		"symfony/http-kernel" : ">=2.3.17"
+	},
 	"minimum-stability" : "dev"
 }
