--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ notifications:
 
 before_script:
     - composer self-update
-    - composer --version
-    - composer install --dev --prefer-dist
+    - composer install --dev
 
 script:
     - phpunit --verbose --coverage-clover=coverage.clover
