--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -2,11 +2,11 @@ services:
     anime_db.shikimori.browser:
         class: AnimeDb\Bundle\ShikimoriBrowserBundle\Service\Browser
         arguments:
-            - @anime_db.shikimori.browser.client
-            - %anime_db.shikimori.host%
-            - %anime_db.shikimori.api.prefix%
+            - '@anime_db.shikimori.browser.client'
+            - '%anime_db.shikimori.host%'
+            - '%anime_db.shikimori.api.prefix%'
 
     anime_db.shikimori.browser.client:
         class: Guzzle\Http\Client
-        arguments: [ %anime_db.shikimori.api.host% ]
+        arguments: [ '%anime_db.shikimori.api.host%' ]
         public: false
