remove methods Browser::getHost() and Browser::getApiHost(). Rename var $api_prefix -> $suffix

--- a/src/Resources/config/parameters.yml
+++ b/src/Resources/config/parameters.yml
@@ -1,4 +1,3 @@
 parameters:
-    anime_db.shikimori.host: 'http://shikimori.org'
-    anime_db.shikimori.api.host: 'http://shikimori.org'
-    anime_db.shikimori.api.prefix: '/api'
+    anime_db.shikimori.host: 'https://shikimori.org'
+    anime_db.shikimori.suffix: '/api'
