--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -4,8 +4,7 @@ services:
         arguments:
             - '@anime_db.shikimori.browser.client'
             - '%anime_db.shikimori.host%'
-            - '%anime_db.shikimori.api.host%'
-            - '%anime_db.shikimori.api.prefix%'
+            - '%anime_db.shikimori.suffix%'
 
     anime_db.shikimori.browser.client:
         class: GuzzleHttp\Client
