available send GET, POST, PUT and DELETE requests. Available add options for requests

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -4,7 +4,7 @@ services:
         arguments:
             - '@anime_db.shikimori.browser.client'
             - '%anime_db.shikimori.host%'
-            - '%anime_db.shikimori.suffix%'
+            - '%anime_db.shikimori.prefix%'
 
     anime_db.shikimori.browser.client:
         class: GuzzleHttp\Client
