--- a/src/Resources/config/parameters.yml
+++ b/src/Resources/config/parameters.yml
@@ -1,3 +1,3 @@
 parameters:
     anime_db.shikimori.host: 'https://shikimori.org'
-    anime_db.shikimori.suffix: '/api'
+    anime_db.shikimori.prefix: '/api'
