--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
     - composer install --dev
 
 script:
-    - phpunit --verbose --coverage-clover=coverage.clover
+    - vendor/bin/phpunit --verbose --coverage-clover=coverage.clover
 
 after_script:
     - wget https://scrutinizer-ci.com/ocular.phar
