--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,7 +1,7 @@
 services:
     anime_db.shikimori.browser:
         class: AnimeDb\Bundle\ShikimoriBrowserBundle\Service\Browser
-        arguments: [ '@anime_db.shikimori.browser.client', ~, ~ ]
+        arguments: [ '@anime_db.shikimori.browser.client', ~, ~, ~ ]
 
     anime_db.shikimori.browser.client:
         class: GuzzleHttp\Client
