--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": ">=5.5",
-        "guzzlehttp/guzzle" : "~6.3"
+        "guzzlehttp/guzzle" : "^7.3"
     },
     "require-dev": {
         "symfony/dependency-injection": "~2.7|~3.0",
